--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,40 +1,79 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
-    android:orientation="vertical">
+    tools:context=".MainActivity">
 
-    <TextView android:text="@string/title"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
         android:layout_gravity="center_horizontal"
-        android:textSize="20sp"
-        android:textColor="@color/green_text_white"/>
+        android:layout_marginTop="25dp"
+        android:text="@string/title"
+        android:textColor="@color/green_text_white"
+        android:textSize="20sp" />
 
-    <TextView android:text="@string/title"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="55dp"/>
+        android:layout_marginTop="35dp"
+        android:text="@string/description"
+        android:textSize="18sp" />
+
     <EditText
         android:id="@+id/ciphertext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:lines="5"
-        />
+        android:hint="@string/input_text"
+        android:lines="5" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:text="@string/method_cipher"
+        android:textSize="18sp" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="center_horizontal">
+
+        <RadioButton
+            android:id="@+id/rbtn_des"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="30dp"
+            android:onClick="desClick"
+            android:text="DES" />
+
+        <RadioButton
+            android:id="@+id/rbtn_aes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="aesClick"
+            android:text="AES" />
+    </LinearLayout>
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="cipher"
-        android:onClick="cipher"/>
+        android:onClick="cipher"
+        android:layout_marginTop="20dp"
+        android:text="@string/cipher" />
 
-    <TextView android:id="@+id/plaintext"
+    <TextView
+        android:id="@+id/plaintext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="55dp"
-        android:lines="5"/>
+        android:lines="5" />
 
 
 </LinearLayout>
