create activity concepts

--- a/app/src/main/res/layout/activity_concepts.xml
+++ b/app/src/main/res/layout/activity_concepts.xml
@@ -1,12 +1,34 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="colsanitas.foonkiemonkey.com.co.des.ConceptsActivity">
+    tools:context=".MainActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="25dp"
+        android:text="@string/title"
+        android:textColor="@color/green_text_white"
+        android:textSize="20sp" />
 
-</RelativeLayout>
+   <ListView
+       android:id="@+id/list_concepts"
+       android:layout_width="wrap_content"
+       android:layout_height="400dp"
+       android:layout_marginTop="30dp">
+
+       </ListView>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="nextClick"
+        android:text="@string/next" />
+
+</LinearLayout>
